fix alignment labels, add params object in state

--- a/frontend/src/components/viewed-cars/styles.module.scss
+++ b/frontend/src/components/viewed-cars/styles.module.scss
@@ -1,5 +1,6 @@
 .ViewedСars {
   width: 100%;
+  padding-bottom: 30px;
   text-align: center;
 
   &Title {
@@ -19,5 +20,5 @@
 }
 
 .VisibilityHidden {
-  visibility: hidden;
+  display: none;
 }
